# async-graph-data-flow

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: .buildinfo  api.html  conf.py  genindex.html  index.html  index.rst  intro.html  more_examples.html  more_examples.rst  objects.inv  quickstart.html  quickstart.rst  requirements.txt  search.html  searchindex.js  technical.html  technical.rst
docs/_sources/: api.rst.txt  index.rst.txt  more_examples.rst.txt
docs/more_examples/: accessing_and_raising_an_exception.rst  concurrent_tasks_per_node.rst  customizable_start_nodes.rst  data_flow_statistics_and_logging.rst  flexible_edge_behaviors_between_nodes.rst  graph_with_nodes_only_and_no_edges.rst  halting_graph_execution_upon_exceptions.rst  incorporating_a_synchronous_function.rst  shared_state_across_asynchronous_functions.rst
docs/source/: conf.py  index.rst  intro.rst  more_examples.rst  technical.rst
examples/: basic_example_with_three_nodes.py  batching_by_batch_size.py  combine_data_from_multiple_source_nodes.py  concurrent_tasks_per_node.py  custom_start_node_args.py  custom_start_nodes.py  data_flow_logging.py  external_sync_call.py  graph_with_branching.py  graph_with_no_edges.py  halt_on_exception_at_a_specific_node.py  halt_on_exception_at_any_node.py  halt_on_mismatched_num_of_args.py  number_range.py  raising_an_exception.py  shared_state.py
src/async_graph_data_flow/: __init__.py  executor.py  graph.py
tests/: test_executor.py  test_graph.py  test_version_number.py
