[build-system]
requires = ["setuptools >= 65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-graph-data-flow"
version = "1.1.0"
description = "Asynchronous functions that pass data along a directed acyclic graph"
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "BSD 3-Clause" }
authors = [ { name = "Civis Analytics", email = "opensource@civisanalytics.com" } ]
keywords = [
    "async",
    "asynchronous",
    "asyncio",
    "data flow",
    "graph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
]

[project.urls]
Source = "https://github.com/civisanalytics/async-graph-data-flow"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 23.1.0",
    "flake8 == 6.0.0",
    "pytest == 7.2.1",

    # Managing source distributions
    "build == 0.10.0",
    "twine == 4.0.2",

    # Documentation
    "Sphinx == 6.1.3",
    "furo == 2022.12.7",
    "numpydoc == 1.5.0",
    "sphinx-copybutton == 0.5.1",
    "sphinxcontrib-mermaid == 0.8",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0"
testpaths = ["tests"]
