[build-system]
requires = ["setuptools >= 69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-graph-data-flow"
version = "1.6.0"
description = "Asynchronous functions that pass data along a directed acyclic graph"
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "BSD 3-Clause" }
authors = [ { name = "Civis Analytics", email = "opensource@civisanalytics.com" } ]
keywords = [
    "async",
    "asynchronous",
    "asyncio",
    "data flow",
    "graph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
]

[project.urls]
Documentation = "https://async-graph-data-flow.readthedocs.io"
Source = "https://github.com/civisanalytics/async-graph-data-flow"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 25.1.0",
    "flake8 == 7.1.2",
    "pytest == 8.3.5",
    "mypy == 1.15.0",

    # Managing source distributions
    "build == 1.2.2",
    "twine == 6.1.0",
]
docs = [
    "Sphinx == 8.2.3",
    "furo == 2024.8.6",
    "numpydoc == 1.8.0",
    "sphinx-copybutton == 0.5.2",
    "sphinxcontrib-mermaid == 1.0.0",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0 --strict-markers"
testpaths = ["tests"]
